thefirst_hw/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-service
  labels:
    app: health-service
spec:
  replicas: 2
  selector:
        matchLabels:
          app: health-service
  template:
    metadata:
      labels:
        app: health-service
    spec:
      containers:
      - image: myhardway/health_status_app
        name: health-service
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 100
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
