thefirst_hw/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: health-service
  name: health-service
spec:
  selector:
    app: health-service
  ports:
  - port: 8000
    targetPort: 8000
  type: NodePort
