thefirst_hw/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  #ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: health-service
            port:
              number: 8000
      - path: /otusapp/([A-Za-z]+)/(.*)
        pathType: Prefix
        backend:
          service:
            name: health-service
            port:
              number: 8000
