thefirst_hw/manfiest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-service
  labels:
    app: health-service
spec:
  replicas: 2
  selector:
        matchLabels:
          app: health-service
  template:
    metadata:
      labels:
        app: health-service
    spec:
      containers:
      - image: myhardway/health_status_app
        name: health-service
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 100
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10


---
# The service, to access the deployment for the code you're developing
apiVersion: v1
kind: Service
metadata:
  labels:
    app: health-service
  name: health-service
spec:
  selector:
    app: health-service
  ports:
  - port: 8000
    targetPort: 8000
  type: NodePort


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: health-service
            port:
              number: 8000
      - path: /otusapp/([A-Za-z]+)/(.*)
        pathType: Prefix
        backend:
          service:
            name: health-service
            port:
              number: 8000
